// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders AI Knowledge Activities card 1`] = `
<DocumentFragment>
  <section
    class="content-hub-card"
  >
    <h2>
      AI Knowledge Activities
      <span
        class="gold-new-tag"
      >
        NEW
      </span>
    </h2>
    <div
      class="content"
    >
      <h3>
        Who is it for?
      </h3>
      <p>
        8-12 Computer Science, ELA, or General Education teachers who want to introduce nonfiction articles about AI and its impact on society to their classrooms.
      </p>
      <h3>
        Pair with aiEDU for deeper learning
      </h3>
      <p>
        Each activity has a free paired activity from our partner nonprofit aiEDU that can be used in tandem with Quill activities.
      </p>
    </div>
    <div
      class="logo-container"
    >
      <img
        alt="Quill logo plus aiEDU: The AI Education Project logo"
        src="undefined/images/pages/dashboard/quill-and-ai-edu-logo.svg"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`renders World History Activities card 1`] = `
<DocumentFragment>
  <section
    class="content-hub-card"
  >
    <h2>
      World History Activities
      <span
        class="gold-new-tag"
      >
        NEW
      </span>
    </h2>
    <div
      class="content"
    >
      <h3>
        Who is it for?
      </h3>
      <p>
        High school world history and ELA teachers who want to supplement their curriculum with a deep dive into essential world history topics and themes.
      </p>
      <h3>
        Pair with OER Project for deeper learning
      </h3>
      <p>
        Each activity has a free paired activity from OER Project that can be used in tandem with Quill activities.
      </p>
    </div>
    <div
      class="logo-container"
    >
      <img
        alt="Quill logo plus OER Project logo"
        src="undefined/images/pages/dashboard/quill-and-oer-logo.svg"
      />
    </div>
  </section>
</DocumentFragment>
`;
